force-app/main/default/objects/Opportunity/fields/College__c.field-meta.xml
<CustomField>
    <fullName>College__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Salesforce] - College of interest related to the Program object
[DW: sfe_opportunity]</description>
    <label>College</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2) OR (3 AND 4)</booleanFilter>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Graduate Prospect, Graduate Application</value>
        </filterItems>
        <filterItems>
            <field>Program__c.Career__c</field>
            <operation>equals</operation>
            <value>Graduate, Law</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Undergraduate Application, Undergraduate Prospect</value>
        </filterItems>
        <filterItems>
            <field>Program__c.Career__c</field>
            <operation>equals</operation>
            <value>Undergraduate</value>
        </filterItems>
        <infoMessage>If you are unable to find your college or school, please click the link "Show all results"</infoMessage>
        <isOptional>true</isOptional>
    </lookupFilter>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities_Program</relationshipName>
    <type>Lookup</type>
</CustomField>