force-app/main/default/objects/Opportunity/fields/College_Orientation_Dates_Confirmed__c.field-meta.xml
<CustomField>
    <fullName>College_Orientation_Dates_Confirmed__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <defaultValue>false</defaultValue>
    <description>[Flow - Campaign_Member_RTAS_On_Create] [Manual] Indicates if a student registered for program orientation.</description>
    <inlineHelpText>[Flow - Campaign_Member_RTAS_On_Create] [Manual] Indicates if a student registered for program orientation.</inlineHelpText>
    <label>College Orientation Dates Confirmed</label>
    <type>Checkbox</type>
</CustomField>