force-app/main/default/objects/Opportunity/fields/College_Stage__c.field-meta.xml
<CustomField>
    <fullName>College_Stage__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Manual] [Flows] This field is used by the academic unit as an internal metric to indicate a student's stage in the application funnel (either a prospect or the stage of the application). This field is not PS sourced and is manually edited by the academic unit.</description>
    <inlineHelpText>[Manual] [Flows] This field is used by the academic unit as an internal metric to indicate a student's stage in the application funnel (either a prospect or the stage of the application). This field is not PS sourced and is manually edited by the academic unit.</inlineHelpText>
    <label>College Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Applied</fullName>
            </value>
            <value>
                <fullName>Admitted</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>