force-app/main/default/objects/Opportunity/fields/College_Status__c.field-meta.xml
<CustomField>
    <fullName>College_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Manual] [Flows] This field is used by the academic unit as an internal metric to indicate a student's status in the application funnel (engagement status as a prospect or application status as an applicant). This field is not PS sourced and is manually edited by the academic unit.</description>
    <inlineHelpText>[Manual] [Flows] This field is used by the academic unit as an internal metric to indicate a student's status in the application funnel (engagement status as a prospect or application status as an applicant). This field is not PS sourced and is manually edited by the academic unit.</inlineHelpText>
    <label>College Status</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>College_Stage__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New</fullName>
            </value>
            <value>
                <fullName>Contacted</fullName>
            </value>
            <value>
                <fullName>Responded</fullName>
            </value>
            <value>
                <fullName>Engaged</fullName>
            </value>
            <value>
                <fullName>Unresponsive</fullName>
            </value>
            <value>
                <fullName>Never Responded</fullName>
            </value>
            <value>
                <fullName>Closed</fullName>
            </value>
            <value>
                <fullName>Do Not Contact</fullName>
            </value>
            <value>
                <fullName>Incomplete</fullName>
            </value>
            <value>
                <fullName>Complete</fullName>
            </value>
            <value>
                <fullName>Waiting on Applicant</fullName>
            </value>
            <value>
                <fullName>Admit</fullName>
            </value>
            <value>
                <fullName>Admit with Deficiencies</fullName>
            </value>
            <value>
                <fullName>Limited Deny</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>Deny</fullName>
            </value>
            <value>
                <fullName>Accepted Offer</fullName>
            </value>
            <value>
                <fullName>Declined - Paid</fullName>
            </value>
            <value>
                <fullName>Declined - Unpaid</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>