force-app/main/default/objects/Opportunity/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>[Salesforce] - Relationship to the Contact object
[MDM] - Read
[DW: sfe_opportunity]</description>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Contact Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>