force-app/main/default/objects/Opportunity/fields/Contact_Local_Time__c.field-meta.xml
<CustomField>
    <fullName>Contact_Local_Time__c</fullName>
    <description>Formula field that displays the Contact's Local Time.

(Account.Contact__r.tz__Local_Time_Short__c)</description>
    <formula>Account.Contact__r.tz__Local_Time_Short__c</formula>
    <inlineHelpText>Formula field that displays the Contact's Local Time.

(Account.Contact__r.tz__Local_Time_Short__c)</inlineHelpText>
    <label>Contact Local Time</label>
    <type>Text</type>
</CustomField>