force-app/main/default/objects/Opportunity/fields/Contact_Mailing_State__c.field-meta.xml
<CustomField>
    <fullName>Contact_Mailing_State__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>[Formula] The foreign or domestic State the applicant is from.  Populated from Contact’s Mailing Address State.</description>
    <formula>Contact__r.MailingState</formula>
    <inlineHelpText>[Formula] The foreign or domestic State the applicant is from.  Populated from Contact’s Mailing Address State.</inlineHelpText>
    <label>Contact Mailing State</label>
    <type>Text</type>
</CustomField>