force-app/main/default/objects/Opportunity/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Formula field that displays the Contact's Phone.

(Account.Contact__r.Phone)</description>
    <formula>Account.Contact__r.Phone</formula>
    <inlineHelpText>Formula field that displays the Contact's Phone.

(Account.Contact__r.Phone)</inlineHelpText>
    <label>Contact Phone</label>
    <type>Text</type>
</CustomField>