force-app/main/default/objects/Opportunity/fields/Converted_Lead_ID__c.field-meta.xml
<CustomField>
    <fullName>Converted_Lead_ID__c</fullName>
    <businessOwnerGroup>Data_Owner_Salesforce_Team</businessOwnerGroup>
    <description>[??] - The ID of the originating Lead for Opportunities created by Lead conversion
[MDM] - Read</description>
    <inlineHelpText>The ID of the originating Lead for Opportunities created by Lead conversion</inlineHelpText>
    <label>Converted Lead ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>