force-app/main/default/objects/Opportunity/fields/Current_CI_Score__c.field-meta.xml
<CustomField>
    <fullName>Current_CI_Score__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>This field determines whether to use the Official CI Score (CI_Score__c) VS the Self Reported CI Score (Self_Reported_CI_Score__c). *KEEP Calculated CI Score &amp; CI Score Used in SYNC*</description>
    <formula>If(
(
(isBlank(CI_Score__c)) &amp;&amp; (isBlank(Self_Reported_CI_Score__c))
) ||
((CI_Score__c=0) &amp;&amp; (Self_Reported_CI_Score__c=0)),NULL,
If(
CI_Score__c&gt;0,CI_Score__c,Self_Reported_CI_Score__c
)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Displays the official calculated index score if it exists, otherwise displays the self reported CI.</inlineHelpText>
    <label>Current CI Score</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>