force-app/main/default/objects/Opportunity/fields/Current_Location__c.field-meta.xml
<CustomField>
    <fullName>Current_Location__c</fullName>
    <description>[Salesforce] - Formula field that displays the current associated Admitted/Academic Plan's Campus name.  Used in reports.
[DW: sfe_opportunity]</description>
    <formula>IF( Admitted_Plan__c &lt;&gt; "",  Admitted_Location__r.Name, Location__r.Name )</formula>
    <inlineHelpText>Displays the current associated Admitted/Academic Plan's Campus name.</inlineHelpText>
    <label>Location</label>
    <type>Text</type>
</CustomField>