force-app/main/default/objects/Opportunity/fields/Current_Participation__c.field-meta.xml
<CustomField>
    <fullName>Current_Participation__c</fullName>
    <description>Current Participation rate in higher education programs</description>
    <label>Current Participation</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>