force-app/main/default/objects/Opportunity/fields/Defer_Territory_Assignment__c.field-meta.xml
<CustomField>
    <fullName>Defer_Territory_Assignment__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Defer Territory Assignment</label>
    <type>Checkbox</type>
</CustomField>