force-app/main/default/objects/Opportunity/fields/Deferred__c.field-meta.xml
<CustomField>
    <fullName>Deferred__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[Peoplesoft] - If someone wants to push back or push forward their start date by a term
[DW: sfe_opportunity]</description>
    <label>Deferred</label>
    <type>Checkbox</type>
</CustomField>