force-app/main/default/objects/Opportunity/fields/Devil_to_Devil_Claimed_Date__c.field-meta.xml
<CustomField>
    <fullName>Devil_to_Devil_Claimed_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <description>Date student signed up for Devil to Devil</description>
    <inlineHelpText>Date student signed up for Devil to Devil</inlineHelpText>
    <label>Devil to Devil Claimed Date</label>
    <type>Date</type>
</CustomField>