force-app/main/default/objects/Opportunity/fields/Devil_to_Devil_Last_Participation__c.field-meta.xml
<CustomField>
    <fullName>Devil_to_Devil_Last_Participation__c</fullName>
    <description>[??] - Date of last patisipation in Devil to Devil
[DW: sfe_opportunity]</description>
    <label>Devil to Devil Last Participation</label>
    <type>Date</type>
</CustomField>