force-app/main/default/objects/Opportunity/fields/Do_Not_Call__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Call__c</fullName>
    <description>[Salesforce] - Formula field that copies over the value of the Contact__r.DoNotCall field to display on the opportunity record.</description>
    <formula>Contact__r.DoNotCall</formula>
    <label>Do Not Call</label>
    <type>Checkbox</type>
</CustomField>