force-app/main/default/objects/Opportunity/fields/Dual_Plan__c.field-meta.xml
<CustomField>
    <fullName>Dual_Plan__c</fullName>
    <description>[Grad Application integration] At the time a Graduate Application is incomplete/unsubmitted, the field contains the value the applicant chose for a Dual Plan. Only partial graduate applicants (Prospects only) may have data in this field.</description>
    <inlineHelpText>[Grad Application integration] At the time a Graduate Application is incomplete/unsubmitted, the field contains the value the applicant chose for a Dual Plan. Only partial graduate applicants (Prospects only) may have data in this field.</inlineHelpText>
    <label>Dual Plan</label>
    <length>20</length>
    <type>Text</type>
</CustomField>