force-app/main/default/objects/Opportunity/fields/Dual_Program__c.field-meta.xml
<CustomField>
    <fullName>Dual_Program__c</fullName>
    <businessOwnerGroup>Data_Owner_Recruitment</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Grad Application integration] At the time a Graduate Application is incomplete/unsubmitted, the field contains the value the applicant chose for a Dual Program. Only partial graduate applicants (Prospects only) may have data in this field.</description>
    <inlineHelpText>[Grad Application integration] At the time a Graduate Application is incomplete/unsubmitted, the field contains the value the applicant chose for a Dual Program. Only partial graduate applicants (Prospects only) may have data in this field.</inlineHelpText>
    <label>Dual Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Opportunities (Dual Program)</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>