force-app/main/default/objects/Opportunity/fields/Email_Eligible_Domestic__c.field-meta.xml
<CustomField>
    <fullName>Email_Eligible_Domestic__c</fullName>
    <formula>IF( 
OR( 
AND(ISBLANK(Contact__r.Email)), 
Contact__r.HasOptedOutOfEmail = True, 
International_Student__c = True, 
Location__r.Name = "Online", 
Location__r.Name = "Lake Havasu", 
Location__r.Name = "Eastern Arizona College", 
Admitted_Location__r.Name = "Online", 
Admitted_Location__r.Name = "Lake Havasu", 
Admitted_Location__r.Name = "Eastern Arizona College", 
ISPICKVAL(ForecastCategoryName, "Withdrawn/Denied") 
),False,True)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Email Eligible Domestic</label>
    <type>Checkbox</type>
</CustomField>