force-app/main/default/objects/Opportunity/fields/Email_Opt_Out__c.field-meta.xml
<CustomField>
    <fullName>Email_Opt_Out__c</fullName>
    <description>[Manual Update] - Formula field that copies over the value of the Contact__r.HasOptedOutOfEmail field to display on the opportunity record.</description>
    <formula>Contact__r.HasOptedOutOfEmail</formula>
    <label>Email Opt Out</label>
    <type>Checkbox</type>
</CustomField>