force-app/main/default/objects/Opportunity/fields/EMPLID__c.field-meta.xml
<CustomField>
    <fullName>EMPLID__c</fullName>
    <businessOwnerGroup>Data_Owner_Campus_Community</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Lookup to the EMPLID in the Contact Object
[Peoplesoft] - PeopleSoft unique ID
[MDM] - Read/Write - Critical to MDM
[DW: sfe_contact]</description>
    <formula>Contact__r.EMPLID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>EMPLID</inlineHelpText>
    <label>EMPLID</label>
    <type>Text</type>
</CustomField>