force-app/main/default/objects/Opportunity/fields/Enroll_Dep_Eligible_for_Defer__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Dep_Eligible_for_Defer__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[??] - Checkbox to see if we can waive the deposit
[DW: sfe_opportunity]</description>
    <inlineHelpText>The student is eligible for the enrollment deposit to be differed.</inlineHelpText>
    <label>Eligible for Deposit Deferment</label>
    <type>Checkbox</type>
</CustomField>