force-app/main/default/objects/Opportunity/fields/Enroll_Dep_Late_Pay_App__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Dep_Late_Pay_App__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[??] - If checked, the student is eligible to delay the enrollment deposit.
[DW: sfe_opportunity]</description>
    <inlineHelpText>If checked, the student is eligible to delay the enrollment deposit.</inlineHelpText>
    <label>Late Payment Approved</label>
    <type>Checkbox</type>
</CustomField>