force-app/main/default/objects/Opportunity/fields/Enroll_Dep_Late_Pay_App_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Dep_Late_Pay_App_Date__c</fullName>
    <description>[??] - Lists the day when the late payment was approved.
[DW: sfe_opportunity]</description>
    <inlineHelpText>Lists the day when the late payment was approved.</inlineHelpText>
    <label>Late Payment Approval Date</label>
    <type>Date</type>
</CustomField>