force-app/main/default/objects/Opportunity/fields/Enroll_Dep_Status__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Dep_Status__c</fullName>
    <description>[Peoplesoft] - Value to display the status of the enrollment deposit.  Examples include: unpaid, paid, deferred, cancel
[DW: sfe_opportunity]</description>
    <label>Enrollment Deposit Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Admin Defer</fullName>
            </value>
            <value>
                <fullName>Cancel</fullName>
            </value>
            <value>
                <fullName>Defer</fullName>
            </value>
            <value>
                <fullName>Paid</fullName>
            </value>
            <value>
                <fullName>Partial</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>