force-app/main/default/objects/Opportunity/fields/Enroll_Dep_Status_Date__c.field-meta.xml
<CustomField>
    <fullName>Enroll_Dep_Status_Date__c</fullName>
    <description>[Peoplesoft] - date when enrollment deposit status was last updated
[DW: sfe_opportunity]</description>
    <inlineHelpText>The last time the enrollment deposit status was updated.</inlineHelpText>
    <label>Enrollment Deposit Status Date</label>
    <type>Date</type>
</CustomField>