force-app/main/default/objects/Opportunity/fields/Enrollment_Coach__c.field-meta.xml
<CustomField>
    <fullName>Enrollment_Coach__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Reference field to User to relate assigned Enrollment Coach to prospective student information.
[DW: sfe_opportunity]</description>
    <label>Enrollment Coach</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Opportunities_EnrollmentCoach</relationshipName>
    <type>Lookup</type>
</CustomField>