force-app/main/default/objects/Opportunity/fields/External_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>External_Application_Number__c</fullName>
    <description>[Peoplesoft, or other] - textbox showing the external application number (up to 10 digits)
[DW: sfe_opportunity]</description>
    <label>External Application Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>