force-app/main/default/objects/Opportunity/fields/External_Application_Source__c.field-meta.xml
<CustomField>
    <fullName>External_Application_Source__c</fullName>
    <description>New Export/Import from The Common App data from PS_ADM_APPL_RCR_CA</description>
    <inlineHelpText>New Export/Import from The Common App data from PS_ADM_APPL_RCR_CA</inlineHelpText>
    <label>External Application Source</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Coalition App</fullName>
            </value>
            <value>
                <fullName>Common App</fullName>
            </value>
            <value>
                <fullName>Common App Transfer</fullName>
            </value>
            <value>
                <fullName>Kaplan</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>