force-app/main/default/objects/Opportunity/fields/Fee_Waiver_Reason__c.field-meta.xml
<CustomField>
    <fullName>Fee_Waiver_Reason__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>[Peoplesoft] Reason For Fee Waiver;  PS Table = ADM_APPL_DATA, PS Field = SAD_WAIVER_BASIS; description of fee waiver reason join on SAD_FEE_WVR_BAS and return  DESCR</description>
    <inlineHelpText>The reason may be blank when the application fee was waived, some automated processes waive an application fee without posting a reason to the system.</inlineHelpText>
    <label>PS App Fee Waiver Reason</label>
    <length>254</length>
    <type>Text</type>
</CustomField>