force-app/main/default/objects/Opportunity/fields/File_Review_Status__c.field-meta.xml
<CustomField>
    <fullName>File_Review_Status__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Flow - Task_RTAS_On_Update] Used to denote where this application is within the file review process (example: 1st Review Complete, Final Review Complete).</description>
    <inlineHelpText>[Flow - Task_RTAS_On_Update] Used to denote where this application is within the file review process (example: 1st Review Complete, Final Review Complete).</inlineHelpText>
    <label>File Review Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>In Progress</fullName>
            </value>
            <value>
                <fullName>1st Review Complete</fullName>
            </value>
            <value>
                <fullName>Final Review Complete</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>