force-app/main/default/objects/Opportunity/fields/First_Generation__c.field-meta.xml
<CustomField>
    <fullName>First_Generation__c</fullName>
    <defaultValue>false</defaultValue>
    <description>[???] - Student is a first generation college student
[DW: sfe_opportunity]</description>
    <inlineHelpText>Student is a first generation college student</inlineHelpText>
    <label>First Generation</label>
    <type>Checkbox</type>
</CustomField>