force-app/main/default/objects/Opportunity/fields/Funding_type__c.field-meta.xml
<CustomField>
    <fullName>Funding_type__c</fullName>
    <description>The Type of organization that we are doing the opportunity with</description>
    <inlineHelpText>The Type of organization that we are doing the opportunity with</inlineHelpText>
    <label>Funding type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ASU</fullName>
            </value>
            <value>
                <fullName>Federal</fullName>
            </value>
            <value>
                <fullName>Foreign</fullName>
            </value>
            <value>
                <fullName>Local</fullName>
            </value>
            <value>
                <fullName>Private</fullName>
            </value>
            <value>
                <fullName>State</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>