force-app/main/default/objects/Opportunity/fields/Goal_Participation__c.field-meta.xml
<CustomField>
    <fullName>Goal_Participation__c</fullName>
    <description>This field will be used by EdPlus for determinate the goal participation for the opportunity.</description>
    <label>Goal Participation</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>