force-app/main/default/objects/Opportunity/fields/Grad_Academic_Interest__c.field-meta.xml
<CustomField>
    <fullName>Grad_Academic_Interest__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grad Academic Interest</label>
    <lookupFilter>
        <active>true</active>
        <errorMessage>The value you selected is not the correct Campaign Type. Please select a Graduate Academic type.</errorMessage>
        <filterItems>
            <field>Campaign.Type</field>
            <operation>equals</operation>
            <value>Graduate Academic, Degree Search by Interest</value>
        </filterItems>
        <infoMessage>Be sure to select a Graduate Academic Campaign Type.</infoMessage>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Campaign</referenceTo>
    <relationshipLabel>Opportunities (Grad Academic Interest)</relationshipLabel>
    <relationshipName>Oppty_Grad_Acad_Interest</relationshipName>
    <type>Lookup</type>
</CustomField>