force-app/main/default/objects/Opportunity/fields/Grad_LOR_Max_Date__c.field-meta.xml
<CustomField>
    <fullName>Grad_LOR_Max_Date__c</fullName>
    <formula>Contact__r.Grad_LOR_Max_Status_Date__c</formula>
    <label>Grad LOR Max Date</label>
    <type>Date</type>
</CustomField>