force-app/main/default/objects/Opportunity/fields/Graduate_I_20_Financial_Guarantee__c.field-meta.xml
<CustomField>
    <fullName>Graduate_I_20_Financial_Guarantee__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Flow- Checklist_Item_RTAS_On_Create_or_Update] Displays the checklist item status for GRADMT FINGGR that is related to this Opportunity.</description>
    <inlineHelpText>[Flow- Checklist_Item_RTAS_On_Create_or_Update] Displays the checklist item status for GRADMT FINGGR that is related to this Opportunity.</inlineHelpText>
    <label>Graduate I-20 Financial Guarantee</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Cancelled</fullName>
            </value>
            <value>
                <fullName>Completed</fullName>
            </value>
            <value>
                <fullName>Initiated</fullName>
            </value>
            <value>
                <fullName>Paid Off</fullName>
            </value>
            <value>
                <fullName>Received</fullName>
            </value>
            <value>
                <fullName>Waived</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>