force-app/main/default/objects/Opportunity/fields/Graduate_Master_Tracker__c.field-meta.xml
<CustomField>
    <fullName>Graduate_Master_Tracker__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>[Apex] - When the Opportunity Interview Status = Complete and the Opportunity Plan Code = BAFULLMBA and Round != NULL and Interview Date &lt;= Today, then create a Master Tracker record. This field is a lookup to the record that gets created.</description>
    <inlineHelpText>[Apex] - When the Opportunity Interview Status = Complete and the Opportunity Plan Code = BAFULLMBA and Round != NULL and Interview Date &lt;= Today, then create a Master Tracker record. This field is a lookup to the record that gets created.</inlineHelpText>
    <label>Graduate Master Tracker</label>
    <referenceTo>Graduate_Master_Tracker__c</referenceTo>
    <relationshipLabel>Opportunities</relationshipLabel>
    <relationshipName>Opportunities</relationshipName>
    <type>Lookup</type>
</CustomField>