force-app/main/default/objects/Opportunity/fields/HBR_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>HBR_Due_Date__c</fullName>
    <businessOwnerGroup>Data_Owner_WPC_Graduate_Programs_Office</businessOwnerGroup>
    <description>[Manual] - WPC GPO users set this date when the applicant needs to complete additional coursework.</description>
    <inlineHelpText>[Manual] - WPC GPO users set this date when the applicant needs to complete additional coursework.</inlineHelpText>
    <label>HBR Due Date</label>
    <type>Date</type>
</CustomField>