force-app/main/default/objects/Opportunity/fields/Highest_GPA__c.field-meta.xml
<CustomField>
    <fullName>Highest_GPA__c</fullName>
    <businessOwnerGroup>Data_Owner_ESISD</businessOwnerGroup>
    <complianceGroup>FERPA</complianceGroup>
    <description>Higher GPA between ABOR and SBOR.</description>
    <formula>IF( ISBLANK(ABOR_GPA__c) &amp;&amp; ISBLANK(SBOR_GPA__c ),ABOR_GPA__c,
IF(  ISBLANK(ABOR_GPA__c) ,  SBOR_GPA__c,
IF(  ISBLANK(SBOR_GPA__c ), ABOR_GPA__c,
IF( (ABOR_GPA__c &gt; SBOR_GPA__c) ,ABOR_GPA__c, SBOR_GPA__c  ) )))</formula>
    <inlineHelpText>Higher GPA between ABOR and SBOR.</inlineHelpText>
    <label>Highest GPA</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>